--- a/Team-Mem/pom.xml
+++ b/Team-Mem/pom.xml
@@ -10,6 +10,7 @@
 	<properties>
 		<java-version>11</java-version>
 		<org.springframework-version>5.2.25.RELEASE</org.springframework-version>
+		<org.spring-sec-version>5.3.13.RELEASE</org.spring-sec-version>
 		<org.aspectj-version>1.6.10</org.aspectj-version>
 	</properties>
 	<dependencies>
@@ -52,6 +53,87 @@
 		</dependency>
 				
 		<!-- Servlet -->
+		
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.32</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<!-- mybatis -->
+
+		<!-- <https://mvnrepository.com/artifact/org.mybatis/mybatis> -->
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis</artifactId>
+			<version>3.5.15</version>
+		</dependency>
+
+		<!-- <https://mvnrepository.com/artifact/org.mybatis/mybatis-spring> -->
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis-spring</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+
+
+		<!-- <https://mvnrepository.com/artifact/org.springframework/spring-jdbc> -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+			<version>${org.springframework-version}</version>
+		</dependency>
+		
+		
+
+
+
+
+		<!-- <https://mvnrepository.com/artifact/org.apache.commons/commons-dbcp2> -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-dbcp2</artifactId>
+			<version>2.12.0</version>
+		</dependency>
+
+		<!-- <https://mvnrepository.com/artifact/com.mysql/mysql-connector-j> -->
+		<dependency>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
+			<version>8.3.0</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-web -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>${org.spring-sec-version}</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-config -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>${org.spring-sec-version}</version>
+		</dependency>
+
+
+		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-taglibs -->
+		<dependency>
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-taglibs</artifactId>
+		    <version>${org.spring-sec-version}</version>
+		</dependency>
+		
+		
+		
+		
+		
+		
+		
+		
 		<dependency>
 			<groupId>org.apache.tomcat</groupId>
 			<artifactId>tomcat-jsp-api</artifactId>
