--- a/Team-Mem/src/main/webapp/WEB-INF/web.xml
+++ b/Team-Mem/src/main/webapp/WEB-INF/web.xml
@@ -9,7 +9,11 @@
 		and Filters -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/spring/root-context.xml</param-value>
+		<param-value>
+		/WEB-INF/spring/root-context.xml
+		/WEB-INF/spring/mybatis-context.xml
+		/WEB-INF/spring/sec-context.xml
+		</param-value>
 	</context-param>
 
 	<!-- Creates the Spring Container shared by all Servlets and Filters -->
