--- a/Team-Mem/pom.xml
+++ b/Team-Mem/pom.xml
@@ -12,6 +12,7 @@
 		<java-version>11</java-version>
 		<org.springframework-version>5.2.25.RELEASE</org.springframework-version>
 		<org.spring-sec-version>5.3.13.RELEASE</org.spring-sec-version>
+		<org.apache.tiles-version>3.0.8</org.apache.tiles-version>
 		<org.aspectj-version>1.6.10</org.aspectj-version>
 	</properties>
 	<dependencyManagement>
@@ -59,6 +60,21 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 
+		</dependency>
+
+		<!-- tiles -->
+		<!-- https://mvnrepository.com/artifact/org.apache.tiles/tiles-core -->
+		<dependency>
+			<groupId>org.apache.tiles</groupId>
+			<artifactId>tiles-core</artifactId>
+			<version>${org.apache.tiles-version}</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.apache.tiles/tiles-extras -->
+		<dependency>
+			<groupId>org.apache.tiles</groupId>
+			<artifactId>tiles-extras</artifactId>
+			<version>${org.apache.tiles-version}</version>
 		</dependency>
 
 		<!-- AspectJ -->
@@ -127,7 +143,7 @@
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-web</artifactId>
-			
+
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-config -->
@@ -142,7 +158,7 @@
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-taglibs</artifactId>
-			
+
 		</dependency>
 
 
