--- a/Team-Mem/pom.xml
+++ b/Team-Mem/pom.xml
@@ -58,18 +58,24 @@
 
 		</dependency>
 
-<!-- 		<dependency>
-			<groupId>org.thymeleaf</groupId>
-			<artifactId>thymeleaf-spring5</artifactId>
-			<version>3.1.2.RELEASE</version>
-		</dependency>
+		<!-- <dependency> <groupId>org.thymeleaf</groupId> <artifactId>thymeleaf-spring5</artifactId> 
+			<version>3.1.2.RELEASE</version> </dependency> <dependency> <groupId>nz.net.ultraq.thymeleaf</groupId> 
+			<artifactId>thymeleaf-layout-dialect</artifactId> <version>3.3.0</version> 
+			</dependency> -->
 
-		<dependency>
-			<groupId>nz.net.ultraq.thymeleaf</groupId>
-			<artifactId>thymeleaf-layout-dialect</artifactId>
-			<version>3.3.0</version>
-		</dependency>
- -->
+  <!-- pom.xml -->
+  <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.9.4</version>
+  </dependency>
+  <!-- java8 date/time -->
+  <dependency>
+      <groupId>com.fasterxml.jackson.datatype</groupId>
+      <artifactId>jackson-datatype-jsr310</artifactId>
+      <version>2.9.4</version>
+  </dependency>
+
 		<!-- AspectJ -->
 		<dependency>
 			<groupId>org.aspectj</groupId>
