--- a/Team-Mem/pom.xml
+++ b/Team-Mem/pom.xml
@@ -33,7 +33,18 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+<dependency>
+    <groupId>com.fasterxml.jackson</groupId>
+    <artifactId>jackson-bom</artifactId>
+    <version>2.16.2</version>
+    <type>pom</type>
+    <scope>import</scope>
+</dependency>
 		</dependencies>
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson/jackson-bom -->
+		
+		
+		
 	</dependencyManagement>
 
 	<dependencies>
@@ -63,24 +74,24 @@
 			<artifactId>thymeleaf-spring5</artifactId>
 			<version>3.1.2.RELEASE</version>
 		</dependency>
-<!-- 		<dependency>
+		<dependency>
 			<groupId>nz.net.ultraq.thymeleaf</groupId>
 			<artifactId>thymeleaf-layout-dialect</artifactId>
 			<version>3.3.0</version>
-		</dependency> -->
+		</dependency> 
 
 		<!-- jackson -->
 		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-			<version>2.9.4</version>
+    		<groupId>com.fasterxml.jackson.core</groupId>
+    		<artifactId>jackson-core</artifactId>
 		</dependency>
+
 		<!-- java8 date/time -->
 		<dependency>
-			<groupId>com.fasterxml.jackson.datatype</groupId>
-			<artifactId>jackson-datatype-jsr310</artifactId>
-			<version>2.9.4</version>
+    		<groupId>com.fasterxml.jackson.datatype</groupId>
+    		<artifactId>jackson-datatype-jsr310</artifactId>
 		</dependency>
+
 
 		<!-- AspectJ -->
 		<dependency>
