--- a/Team-Mem/pom.xml
+++ b/Team-Mem/pom.xml
@@ -33,18 +33,18 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
-<dependency>
-    <groupId>com.fasterxml.jackson</groupId>
-    <artifactId>jackson-bom</artifactId>
-    <version>2.16.2</version>
-    <type>pom</type>
-    <scope>import</scope>
-</dependency>
+			<dependency>
+				<groupId>com.fasterxml.jackson</groupId>
+				<artifactId>jackson-bom</artifactId>
+				<version>2.16.2</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
 		</dependencies>
 		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson/jackson-bom -->
-		
-		
-		
+
+
+
 	</dependencyManagement>
 
 	<dependencies>
@@ -78,18 +78,26 @@
 			<groupId>nz.net.ultraq.thymeleaf</groupId>
 			<artifactId>thymeleaf-layout-dialect</artifactId>
 			<version>3.3.0</version>
-		</dependency> 
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.thymeleaf.extras/thymeleaf-extras-springsecurity5 -->
+		<dependency>
+			<groupId>org.thymeleaf.extras</groupId>
+			<artifactId>thymeleaf-extras-springsecurity5</artifactId>
+			<version>3.0.4.RELEASE</version>
+		</dependency>
+
+
 
 		<!-- jackson -->
 		<dependency>
-    		<groupId>com.fasterxml.jackson.core</groupId>
-    		<artifactId>jackson-core</artifactId>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
 		</dependency>
 
 		<!-- java8 date/time -->
 		<dependency>
-    		<groupId>com.fasterxml.jackson.datatype</groupId>
-    		<artifactId>jackson-datatype-jsr310</artifactId>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
 		</dependency>
 
 
